<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <url>https://github.com/jeap-admin-ch/jeap-governance-service/tree/main</url>
    <scm>
        <url>https://github.com/jeap-admin-ch/jeap-governance-service.git</url>
        <connection>scm:git:git://github.com/jeap-admin-ch/jeap-governance-service.git</connection>
        <developerConnection>scm:git:ssh://github.com:jeap-admin-ch/jeap-governance-service.git</developerConnection>
    </scm>
    <developers>
        <developer>
            <name>BIT</name>
            <email>jeap-community@bit.admin.ch</email>
            <organization>Federal Office of Information Technology, Systems and Telecommunication FOITT</organization>
            <organizationUrl>https://www.bit.admin.ch/</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0</url>
        </license>
    </licenses>

    <parent>
        <groupId>ch.admin.bit.jeap</groupId>
        <artifactId>jeap-spring-boot-parent</artifactId>
        <version>30.16.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <artifactId>jeap-governance-service</artifactId>
    <name>${project.groupId}:${project.artifactId}</name>
    <version>0.0.6-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <asciidoc-confluence-publisher-client.version>0.30.2</asciidoc-confluence-publisher-client.version>
        <maven.javadoc.skip>false</maven.javadoc.skip>
        <java.version>25</java.version>
    </properties>

    <modules>
        <module>jeap-governance-dataimport</module>
        <module>jeap-governance-domain</module>
        <module>jeap-governance-persistence</module>
        <module>jeap-governance-rules</module>
        <module>jeap-governance-rules-core</module>
        <module>jeap-governance-archrepo</module>
        <module>jeap-governance-web</module>
        <module>jeap-governance-docgen</module>
        <module>jeap-governance-prometheus</module>
        <module>jeap-governance-pactbroker</module>
        <module>jeap-governance-deploymentlog</module>
        <module>jeap-governance-service-instance</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-dataimport</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-domain</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-persistence</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-rules</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-rules-core</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-archrepo</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-deploymentlog</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-web</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-docgen</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-prometheus</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-pactbroker</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>
            <dependency>
                <groupId>ch.admin.bit.jeap</groupId>
                <artifactId>jeap-governance-service-instance</artifactId>
                <version>0.0.6-SNAPSHOT</version>
            </dependency>

            <dependency>
                <groupId>org.sahli.asciidoc.confluence.publisher</groupId>
                <artifactId>asciidoc-confluence-publisher-client</artifactId>
                <version>${asciidoc-confluence-publisher-client.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


    <build>
        <pluginManagement>
            <plugins>
                <!-- Add license entry to jar manifest -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Bundle-License>https://www.apache.org/licenses/LICENSE-2.0</Bundle-License>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <configuration>
                        <additionalOptions>-Xdoclint:none</additionalOptions>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!-- Check third-party license compliance -->
            <plugin>
                <groupId>org.honton.chas</groupId>
                <artifactId>license-maven-plugin</artifactId>
            </plugin>
            <!-- Generate third-party license list -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>license-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
